[library] Updated @angular/material and @angular/cdk to beta.11 and required fixes

--- a/src/app/components/dialog/dialog.component.scss
+++ b/src/app/components/dialog/dialog.component.scss
@@ -1,10 +1,10 @@
 h1 {
-  md-icon {
+  mat-icon {
     padding-right: 6px;
   }
 }
 
-md-card {
+mat-card {
   .dialogCardHeader {
     font-size: small;
     margin-bottom: 8px;
