--- a/src/app/components/dialog/menu/about-dialog/about-dialog.component.html
+++ b/src/app/components/dialog/menu/about-dialog/about-dialog.component.html
@@ -4,7 +4,7 @@
      fxLayoutAlign="space-between stretch"
      fxLayoutWrap="nowrap">
   <div class="flex-item gurpsy-face">
-    <md-icon svgIcon="gurpsy-face"></md-icon>
+    <mat-icon svgIcon="gurpsy-face"></mat-icon>
   </div>
   <div class="flex-item flex-container"
        fxLayout="column">
@@ -13,12 +13,12 @@
   </div>
 </div>
 
-<md-dialog-content>
+<mat-dialog-content>
   <div class="about">
     {{'DIALOG.ABOUT.ABOUT'| translate}}
   </div>
-</md-dialog-content>
+</mat-dialog-content>
 
-<md-dialog-actions align="end">
-  <button md-button color="primary" md-dialog-close> {{'DIALOG.CLOSE'| translate}}</button>
-</md-dialog-actions>
+<mat-dialog-actions align="end">
+  <button mat-button color="primary" matDialogClose> {{'DIALOG.CLOSE'| translate}}</button>
+</mat-dialog-actions>
