--- a/src/app/components/dialog/menu/dice-dialog/dice-dialog.component.html
+++ b/src/app/components/dialog/menu/dice-dialog/dice-dialog.component.html
@@ -1,9 +1,9 @@
-<md-dialog-content>
+<mat-dialog-content>
   <div class="diceView" #canvas>
   </div>
-</md-dialog-content>
+</mat-dialog-content>
 
-<md-dialog-actions align="end">
-  <button md-button color="primary" (click)="onRethrow()"> {{'DIALOG.DICE.RETHROW'| translate}}</button>
-  <button md-button color="primary" md-dialog-close> {{'DIALOG.CLOSE'| translate}}</button>
-</md-dialog-actions>
+<mat-dialog-actions align="end">
+  <button mat-button color="primary" (click)="onRethrow()"> {{'DIALOG.DICE.RETHROW'| translate}}</button>
+  <button mat-button color="primary" matDialogClose> {{'DIALOG.CLOSE'| translate}}</button>
+</mat-dialog-actions>
