--- a/src/app/components/dialog/template-updaters/identity-updater/identity-updater.component.html
+++ b/src/app/components/dialog/template-updaters/identity-updater/identity-updater.component.html
@@ -1,21 +1,21 @@
-<md-dialog-content *ngIf="template"
+<mat-dialog-content *ngIf="template"
                    class="identityUpdater flex-container"
                    fxLayout="column">
-  <md-input-container class="flex-item">
-    <input mdInput placeholder="{{'SHEET.IDENTITY.NAME'| translate}}" [(ngModel)]="template.name" required>
-    <md-error>{{'MESSAGE.ERROR.REQUIRED_NAME'| translate}}</md-error>
-  </md-input-container>
-  <md-input-container class="flex-item">
-    <input mdInput placeholder="{{'SHEET.IDENTITY.TITLE'| translate}}" [(ngModel)]="template.title">
-  </md-input-container>
-  <md-input-container class="flex-item">
-    <input mdInput placeholder="{{'SHEET.IDENTITY.RELIGION'| translate}}" [(ngModel)]="template.religion">
-  </md-input-container>
-</md-dialog-content>
+  <mat-form-field class="flex-item">
+    <input matInput placeholder="{{'SHEET.IDENTITY.NAME'| translate}}" [(ngModel)]="template.name" required>
+    <mat-error>{{'MESSAGE.ERROR.REQUIRED_NAME'| translate}}</mat-error>
+  </mat-form-field>
+  <mat-form-field class="flex-item">
+    <input matInput placeholder="{{'SHEET.IDENTITY.TITLE'| translate}}" [(ngModel)]="template.title">
+  </mat-form-field>
+  <mat-form-field class="flex-item">
+    <input matInput placeholder="{{'SHEET.IDENTITY.RELIGION'| translate}}" [(ngModel)]="template.religion">
+  </mat-form-field>
+</mat-dialog-content>
 
-<md-dialog-actions *ngIf="template" align="end">
-  <button md-button color="primary" [disabled]="!template.name || template.name.trim() === ''" (click)="onOk()">
+<mat-dialog-actions *ngIf="template" align="end">
+  <button mat-button color="primary" [disabled]="!template.name || template.name.trim() === ''" (click)="onOk()">
     {{'DIALOG.OK'| translate}}
   </button>
-  <button md-button md-dialog-close> {{'DIALOG.CANCEL'| translate}}</button>
-</md-dialog-actions>
+  <button mat-button matDialogClose> {{'DIALOG.CANCEL'| translate}}</button>
+</mat-dialog-actions>
