--- a/src/app/components/generic/select-sheet-button/select-sheet-button.component.html
+++ b/src/app/components/generic/select-sheet-button/select-sheet-button.component.html
@@ -1,6 +1,6 @@
 <button
   [disabled]="disabled"
-  md-button
+  mat-button
   (click)="onClick()">
   <div class="flex-container"
        fxLayout="row"
