--- a/src/app/components/sheet/reusable/player-information/player-information.component.html
+++ b/src/app/components/sheet/reusable/player-information/player-information.component.html
@@ -14,7 +14,7 @@
         <td class="campaign">{{sheet.metaData.playerInformation.campaign}}</td>
       </tr>
       <tr
-        md-tooltip="{{ 'SHEET.PLAYER_INFORMATION.CREATED_ON' | translate }}: {{sheet.metaData.playerInformation.createdOn | date}}">
+        matTooltip="{{ 'SHEET.PLAYER_INFORMATION.CREATED_ON' | translate }}: {{sheet.metaData.playerInformation.createdOn | date}}">
         <td>{{ 'SHEET.PLAYER_INFORMATION.LAST_MODIFIED' | translate }}</td>
         <td class="lastModified">{{sheet.metaData.playerInformation.lastModified | date}}
         </td>
