--- a/src/app/components/sheet/sheet.component.html
+++ b/src/app/components/sheet/sheet.component.html
@@ -1,4 +1,4 @@
-<md-card>
+<mat-card>
   <gurpsy-sheet-header></gurpsy-sheet-header>
   <gurpsy-sheet-body></gurpsy-sheet-body>
-</md-card>
+</mat-card>
