--- a/src/app/components/side-navigation/_side-navigation.component.scss
+++ b/src/app/components/side-navigation/_side-navigation.component.scss
@@ -23,7 +23,7 @@
           color: $hintText;
         }
       }
-      button.selected md-icon {
+      button.selected mat-icon {
         color: $secondaryText;
       }
       .separator {
