--- a/src/app/components/side-navigation/side-navigation.component.scss
+++ b/src/app/components/side-navigation/side-navigation.component.scss
@@ -31,7 +31,7 @@
       span {
         text-align: left;
       }
-      md-icon {
+      mat-icon {
         padding: 6px 0px 6px 0px;
         margin-right: 24px;
       }
