--- a/src/app/gurpsy.component.scss
+++ b/src/app/gurpsy.component.scss
@@ -1,15 +1,15 @@
-md-toolbar {
+mat-toolbar {
   margin-bottom: 12px;
   flex: none;
 }
 
-md-toolbar {
+mat-toolbar {
   gurpsy-avatar {
     margin-top: 12px;
   }
 }
 
-md-sidenav {
+mat-sidenav {
   width: 240px;
 }
 
