--- a/src/app/components/book-viewer/book-viewer.component.html
+++ b/src/app/components/book-viewer/book-viewer.component.html
@@ -10,11 +10,11 @@
   </div>
 
   <div class="button-row pdfControls">
-    <button md-raised-button (click)="onFirst()"><md-icon>first_page</md-icon></button>
-    <button md-raised-button (click)="onDecrement()"><md-icon>chevron_left</md-icon></button>
-    <button md-raised-button (click)="onZoomOut()"><md-icon>zoom_out</md-icon></button>
-    <button md-raised-button (click)="onZoomIn()"><md-icon>zoom_in</md-icon></button>
-    <button md-raised-button (click)="onIncrement()"><md-icon>chevron_right</md-icon></button>
-    <button md-raised-button (click)="onLast()"><md-icon>last_page</md-icon></button>
+    <button mat-raised-button (click)="onFirst()"><mat-icon>first_page</mat-icon></button>
+    <button mat-raised-button (click)="onDecrement()"><mat-icon>chevron_left</mat-icon></button>
+    <button mat-raised-button (click)="onZoomOut()"><mat-icon>zoom_out</mat-icon></button>
+    <button mat-raised-button (click)="onZoomIn()"><mat-icon>zoom_in</mat-icon></button>
+    <button mat-raised-button (click)="onIncrement()"><mat-icon>chevron_right</mat-icon></button>
+    <button mat-raised-button (click)="onLast()"><mat-icon>last_page</mat-icon></button>
   </div>
 </div>
