--- a/src/app/components/sheet/reusable/points/points.component.html
+++ b/src/app/components/sheet/reusable/points/points.component.html
@@ -33,7 +33,7 @@
         <td>{{sheet.points.spells}}</td>
       </tr>
       <tr>
-        <td>{{ 'SHEET.POINTS.EARNED' | translate }}</td>
+        <td>{{ 'SHEET.POINTS.UNSPENT' | translate }}</td>
         <td>{{sheet.points.unspent}}</td>
       </tr>
     </table>
