--- a/src/app/components/sheet/reusable/points/points.component.html
+++ b/src/app/components/sheet/reusable/points/points.component.html
@@ -1,16 +1,16 @@
 <div class="sheetComponent points">
   <div class="sheetComponentHeader gurpsyThemeHeader">
-    <span *ngIf="sheet.points.total">{{sheet.points.total + ' '}}</span>{{ 'SHEET.POINTS.POINTS' | translate }}
+    {{sheet.points.total + ' '}}{{ 'SHEET.POINTS.POINTS' | translate }}
   </div>
   <div class="sheetComponentBody">
     <table>
       <tr>
         <td>{{ 'SHEET.POINTS.RACE' | translate }}</td>
-        <td>0</td>
+        <td>{{sheet.points.race}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.POINTS.ATTRIBUTES' | translate }}</td>
-        <td>0</td>
+        <td>{{sheet.points.attributes}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.POINTS.ADVANTAGES' | translate }}</td>
@@ -22,7 +22,7 @@
       </tr>
       <tr>
         <td>{{ 'SHEET.POINTS.QUIRKS' | translate }}</td>
-        <td>0</td>
+        <td>{{sheet.points.quirks}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.POINTS.SKILLS' | translate }}</td>
