[enhancement] Minor styling improvements.

--- a/src/app/components/select-sheet/select-sheet.component.html
+++ b/src/app/components/select-sheet/select-sheet.component.html
@@ -6,8 +6,11 @@
         <div class="flex-container"
              fxLayoutGap="8px"
              fxLayout="row">
-          <mat-icon class="flex-item" fxFlexAlign="center">portrait</mat-icon>
-          <div class="flex-item"
+          <mat-icon class="flex-item"
+                    fxFlexAlign="center">
+            portrait
+          </mat-icon>
+          <div class="flex-item buttonText"
                fxFlex="100%">
             {{ 'SELECT_SHEET.CREATE_NEW' | translate }}
           </div>
@@ -22,9 +25,11 @@
         <div class="flex-container"
              fxLayoutGap="8px"
              fxLayout="row">
-          <mat-icon class="flex-item" fxFlexAlign="center">account_box</mat-icon>
-          <div class="flex-item"
-               fxFlexAlign="center"
+          <mat-icon class="flex-item"
+                    fxFlexAlign="center">
+            account_box
+          </mat-icon>
+          <div class="flex-item buttonText"
                fxFlex="100%">
             {{ 'SELECT_SHEET.LOAD_FROM_FILE' | translate }}
           </div>
