--- a/src/app/components/sheet/reusable/description/description.component.html
+++ b/src/app/components/sheet/reusable/description/description.component.html
@@ -44,7 +44,7 @@
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.TL' | translate }}</td>
-          <td>{{sheet.metaData.description.TL}}</td>
+          <td>{{sheet.metaData.description.tl}}</td>
         </tr>
       </table>
     </div>
