[enhancement] First rough draft of a Weight input field

--- a/src/app/components/dialog/template-updaters/description-updater/description-updater.component.html
+++ b/src/app/components/dialog/template-updaters/description-updater/description-updater.component.html
@@ -16,9 +16,8 @@
     <mat-form-field class="flex-item">
       <input matInput placeholder="{{'SHEET.DESCRIPTION.BIRTHDAY'| translate}}" [(ngModel)]="template.birthday">
     </mat-form-field>
-    <mat-form-field class="flex-item">
-      <input matInput placeholder="{{'SHEET.DESCRIPTION.WEIGHT'| translate}}" [(ngModel)]="template.weight">
-    </mat-form-field>
+    <gurpsy-weight [template]="template" class="flex-item">
+    </gurpsy-weight>
     <mat-form-field class="flex-item">
       <input matInput placeholder="{{'SHEET.DESCRIPTION.HEIGHT'| translate}}" [(ngModel)]="template.height">
     </mat-form-field>
