--- a/src/app/presentation/dialoges/generic/settings-dialog/settings-dialog.component.html
+++ b/src/app/presentation/dialoges/generic/settings-dialog/settings-dialog.component.html
@@ -16,7 +16,7 @@
       <br>
       <mat-slide-toggle
         (change)="onMetricsChange()"
-        [(ngModel)]="siMetrics">
+        [(ngModel)]="imperialUnits">
         {{'DIALOG.SETTINGS.SI_METRICS'| translate}}
       </mat-slide-toggle>
     </div>
