[enhancement] WIP on a weight input field

--- a/src/app/presentation/components/form/weight/weight.form.component.html
+++ b/src/app/presentation/components/form/weight/weight.form.component.html
@@ -2,7 +2,7 @@
   <input matInput
          type="number"
          placeholder="{{'SHEET.DESCRIPTION.WEIGHT'| translate}}"
-         [(ngModel)]="template.weight">
+         [(ngModel)]="weightViewValue">
   <span *ngIf="unit === unitEnum.METRIC " matSuffix>kg</span>
   <span *ngIf="unit === unitEnum.IMPERIAL " matSuffix>lb</span>
 </mat-form-field>
