[refactor] Removed old handling of units

--- a/src/app/presentation/components/sheet/reusable/description/description.component.html
+++ b/src/app/presentation/components/sheet/reusable/description/description.component.html
@@ -32,7 +32,7 @@
       <table>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.WEIGHT' | translate }}</td>
-          <td>{{sheet.metaData.description.weight | weight}}</td>
+          <td>{{sheet.metaData.description.weight}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.HEIGHT' | translate }}</td>
